raw/issue-32278-big-array-of-strings--2016-11-11-11-03-50--0.log
commit ba2e892249d51cce0980e95e0b4daabb7710ad82
Merge: 4da129d 43aed32
Author: bors <bors@rust-lang.org>
Date:   Fri Nov 11 05:55:04 2016 -0800

    Auto merge of #37447 - estebank:non-duplicate-definition-error, r=nrc
    
    Show one error for duplicated type definitions
    
    For the following code:
    
    ``` rustc
    struct Bar;
    struct Bar;
    
    fn main () {
    }
    ```
    
    show
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to previous error
    ```
    
    instead of
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error[E0428]: a value named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to 2 previous errors
    ```
    
    Fixes #35767.
rustc: ./issue-32278-big-array-of-strings
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling issue-32278-big-array-of-strings v0.1.0 (file:///root/benchmarks/issue-32278-big-array-of-strings)
time: 0.098; rss: 60MB	parsing
Lines of code:             65577
Pre-expansion node count:  65552
time: 0.000; rss: 60MB	recursion limit
time: 0.000; rss: 60MB	crate injection
time: 0.000; rss: 60MB	plugin loading
time: 0.000; rss: 60MB	plugin registration
time: 0.035; rss: 82MB	expansion
time: 0.000; rss: 82MB	maybe building test harness
time: 0.001; rss: 82MB	maybe creating a macro crate
Post-expansion node count: 65565
time: 0.000; rss: 82MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 82MB	complete gated feature checking
time: 0.005; rss: 82MB	early lint checks
time: 0.000; rss: 82MB	AST validation
time: 0.003; rss: 86MB	name resolution
time: 0.005; rss: 95MB	lowering ast -> hir
time: 0.001; rss: 99MB	indexing hir
time: 0.001; rss: 99MB	attribute checking
time: 0.000; rss: 88MB	language item collection
time: 0.000; rss: 88MB	lifetime resolution
time: 0.000; rss: 88MB	looking for entry point
time: 0.000; rss: 88MB	looking for plugin registrar
time: 0.007; rss: 94MB	region resolution
time: 0.000; rss: 94MB	loop checking
time: 0.001; rss: 94MB	static item recursion checking
time: 0.020; rss: 94MB	compute_incremental_hashes_map
time: 0.000; rss: 94MB	load_dep_graph
time: 0.000; rss: 94MB	type collecting
time: 0.000; rss: 94MB	variance inference
time: 0.004; rss: 96MB	coherence checking
time: 0.000; rss: 97MB	wf checking
time: 0.530; rss: 108MB	item-types checking
time: 0.000; rss: 108MB	item-bodies checking
time: 0.000; rss: 108MB	drop-impl checking
time: 0.021; rss: 107MB	const checking
time: 0.001; rss: 107MB	privacy checking
time: 0.000; rss: 107MB	stability index
time: 0.000; rss: 107MB	intrinsic checking
time: 0.000; rss: 107MB	effect checking
time: 0.000; rss: 107MB	match checking
time: 0.000; rss: 107MB	liveness checking
time: 0.000; rss: 107MB	rvalue checking
time: 0.041; rss: 112MB	MIR dump
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.001; rss: 112MB	QualifyAndPromoteConstants
  time: 0.000; rss: 112MB	TypeckMir
  time: 0.000; rss: 112MB	SimplifyBranches
  time: 0.000; rss: 112MB	SimplifyCfg
time: 0.002; rss: 112MB	MIR cleanup and validation
time: 0.001; rss: 112MB	borrow checking
time: 0.000; rss: 112MB	reachability checking
time: 0.000; rss: 112MB	death checking
time: 0.000; rss: 112MB	stability checking
time: 0.000; rss: 112MB	unused lib feature checking
time: 0.024; rss: 112MB	lint checking
time: 0.001; rss: 112MB	resolving dependency formats
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.001; rss: 112MB	EraseRegions
  time: 0.000; rss: 112MB	AddCallGuards
  time: 0.000; rss: 112MB	ElaborateDrops
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.000; rss: 112MB	InstCombine
  time: 0.000; rss: 112MB	Deaggregator
  time: 0.000; rss: 112MB	CopyPropagation
  time: 0.000; rss: 112MB	SimplifyLocals
  time: 0.000; rss: 112MB	AddCallGuards
  time: 0.000; rss: 112MB	PreTrans
time: 0.001; rss: 112MB	MIR optimisations
  time: 0.000; rss: 113MB	write metadata
  time: 0.001; rss: 113MB	translation item collection
  time: 0.000; rss: 113MB	codegen unit partitioning
  time: 0.001; rss: 126MB	internalize symbols
time: 0.054; rss: 126MB	translation
time: 0.000; rss: 126MB	assert dep graph
time: 0.000; rss: 126MB	serialize dep graph
  time: 0.008; rss: 86MB	llvm function passes [0]
  time: 0.000; rss: 86MB	llvm module passes [0]
  time: 0.174; rss: 87MB	codegen passes [0]
  time: 0.000; rss: 87MB	codegen passes [0]
time: 0.183; rss: 87MB	LLVM passes
time: 0.000; rss: 87MB	serialize work products
  time: 0.152; rss: 75MB	running linker
time: 0.154; rss: 75MB	linking
done
